[tool.poetry]
name = "yolov9"
version = "0.1.0"
description = "YOLOv9 Object Detection Package"
authors = [
    "Marwan <mkhaled@xpect.ai>",
]
packages = [
    { include = "yolov9" },
    { include = "yolov9/utils" },
    { include = "yolov9/models" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"


# Base Dependencies
gitpython = "*"
# ipython = "*"
matplotlib = ">=3.2.2"
# numpy = ">=1.18.5"
Pillow = ">=7.1.2"
# psutil = "*"
PyYAML = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
thop = ">=0.1.1"
#torch = ">=1.7.0"
#torchvision = ">=0.8.1"
tqdm = ">=4.64.0"
torch = "^2.5.1"
pandas = "^2.2.3"
ipython = "^8.31.0"
psutil = "^6.1.1"
torchvision = "^0.20.1"
easyocr = "^1.7.2"
opencv-contrib-python = "^4.11.0.86"
numpy = "1.26.4"

# Logging
tensorboard = ">=2.4.1"

# Plotting
# pandas = ">=1.1.4"
seaborn = ">=0.11.0"

# Export
albumentations = ">=1.0.3"
pycocotools = ">=2.0"

[tool.poetry.extras]
yolov9_optional = ["torch", "torchvision", "tensorboard"]  # Example extras

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
